update java options for memliner